# PyCalcPro

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  LICENSE.txt  README.md  SECURITY.md  TESTS.md  pyproject.toml
PyCalc Pro Desktop Software V1.0/Src/: PyCalc_Pro_V1.0.py
PyCalc Pro Software V1.3/Src/: PyCalc_Pro_V1.3.py
PyCalc Pro V.1.5/Doc/: LICENSE.txt
PyCalc Pro V.1.5/Src/: PyCalcPro_V1.5_DATA.json  PyCalc_Pro_V1.5.py
PyCalc Pro V.1.6/Modules/: __init__.py  operations.py  state.py  utils.py
PyCalc Pro V.1.6/Src/: PyCalcPro_V1.6_DATA.json  main.py
PyCalc Pro V.15/Doc/: LICENSE.txt  requirements.txt
PyCalc Pro V.15/Src/: PyCalcPro_V1.5_DATA.json  PyCalc_Pro_V1.5.py
PyCalc Pro V1.1/: TERMS_OF_USE.txt
PyCalc Pro V1.1/Src/: PyCalc_Pro_V1.1.py  UNIT_CONVERTER.txt
PyCalc Pro V1.2/Doc/: PYCALC_PRO_V1.2_TERMS_OF_USE.txt
PyCalc Pro V1.2/Src/: PyCalc_Pro_V1.2.py
PyCalc Pro V1.3/Doc/: Unit_Conversion_Avaible.txt
PyCalc Pro V1.4/Src/: PyCalc_Pro_V1.4.py
PyCalc Pro Webiste/: index.html
Src/pycalcpro/: __init__.py  assets.py  calculator.py  input_validation.py  main.py  operations.py  storage.py  ui.py
docs/: index.html  script.js  style.css
