[project]
name = "PyCalc Pro"
version = "1.6"
description = "PyCalc Pro is a professional and easy to use calculator developed in Python"
authors = [{name = "LDM Dev"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[project.urls]
Website = "https://lorydima.github.io/PyCalcPro/"
Repository = "https://github.com/Lorydima/PyCalcPro"

[tool.setuptools]
packages = ["src.modules"]

[build-system]
requires = []
build-backend = ""
